# app/models/child.rb
@@ -2,14 +2,16 @@
 
 # A child in care at businesses who need subsidy assistance
 class Child < UuidApplicationRecord
-  belongs_to :user
+  belongs_to :business
 
   validates :active, inclusion: { in: [true, false] }
   validates :date_of_birth, presence: true
   validates :full_name, presence: true
-  validates :full_name, uniqueness: { scope: %i[date_of_birth user_id] }
+  validates :full_name, uniqueness: { scope: %i[date_of_birth business_id] }
 
   validates :date_of_birth, date_param: true
+
+  delegate :user, to: :business
 end
 
 # == Schema Information
@@ -22,11 +24,14 @@ end
 #  full_name     :string           not null
 #  created_at    :datetime         not null
 #  updated_at    :datetime         not null
-#  ccms_id       :string
-#  user_id       :uuid             not null
+#  business_id   :uuid             not null
 #
 # Indexes
 #
-#  index_children_on_user_id  (user_id)
-#  unique_children            (full_name,date_of_birth,user_id) UNIQUE
+#  index_children_on_business_id  (business_id)
+#  unique_children                (full_name,date_of_birth,business_id) UNIQUE
+#
+# Foreign Keys
+#
+#  fk_rails_...  (business_id => businesses.id)
 #
