# swagger/v1/swagger.json
@@ -1137,10 +1137,6 @@
       "child": {
         "type": "object",
         "properties": {
-          "ccms_id": {
-            "type": "string",
-            "example": "987654321"
-          },
           "date_of_birth": {
             "type": "string",
             "example": "1992-11-01"
@@ -1317,10 +1313,6 @@
           "child": {
             "type": "object",
             "properties": {
-              "ccms_id": {
-                "type": "string",
-                "example": "123456789"
-              },
               "date_of_birth": {
                 "type": "string",
                 "example": "1991-11-01"
@@ -1329,7 +1321,7 @@
                 "type": "string",
                 "example": "Seamus Finnigan"
               },
-              "user_id": {
+              "business_id": {
                 "type": "uuid",
                 "example": "3fa57706-f5bb-4d40-9350-85871f698d55"
               }
@@ -1337,7 +1329,7 @@
             "required": [
               "full_name",
               "date_of_birth",
-              "user_id"
+              "business_id"
             ]
           }
         }
